--- a/src/app/grade/grade.page.html
+++ b/src/app/grade/grade.page.html
@@ -78,8 +78,15 @@
     </ion-row>
   </ion-grid>
 
-  <!-- MODIFICACIONES----------------------------------------------------------- -->
+    <!-- Boton flotante de agregar -->
+    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+      <ion-fab-button [routerLink]="['/newgrade', grupoid]">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
 
+  <!-- MODIFICACIONES----------------------------------------------------------- -->
+  <!-- 
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button>
       <ion-icon name="chevron-up-circle"></ion-icon>
@@ -88,12 +95,15 @@
       <ion-fab-button [routerLink]="['/newgrade', grupoid]">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
+-->      
       <!-- MODIFICACIONES----------------------------------------------------------- -->
       <!-- <ion-fab-button>
         <ion-icon name="trash"></ion-icon>
       </ion-fab-button> -->
+  <!--       
     </ion-fab-list>
   </ion-fab>
+-->  
   <!-- MODIFICACIONES----------------------------------------------------------- -->
 
   <app-paginacion [total]="totalCalificaciones" (click)="pagina($event)"></app-paginacion>
