--- a/src/app/grade/grade.page.html
+++ b/src/app/grade/grade.page.html
@@ -18,7 +18,7 @@
   <!-- MODIFICACIONES----------------------------------------------------------- -->
   <ion-grid>
     <ion-row *ngFor="let grades of grade ; let i = index">
-      <ion-col size="6" class="icon-col">
+      <ion-col class="icon-col">
         <div class="rectangle-avatar">
           <!-- <ion-img src="assets/img/extra.png" alt="Foto"></ion-img> -->
           <!-- <ion-icon name="checkmark-done"></ion-icon> -->
