--- a/src/app/classroom/classroom.page.html
+++ b/src/app/classroom/classroom.page.html
@@ -15,9 +15,9 @@
     <!-- Crear una fila por cada elemento --> 
     <ion-row *ngFor= "let classroom of classrooms; let i = index" >
       <!-- Crear columna para el icono-->
-      <ion-col size="1">
+      <ion-col>
         <!-- MODIFICACIONES----------------------------------------------------------- -->
-        <ion-img [src]="'assets/classrooms/classrooms' + ((i % 3) + 1) + '.png'" alt="Foto"></ion-img>
+        <ion-img class="mi-imagen" [src]="'assets/classrooms/classrooms' + ((i % 3) + 1) + '.png'" alt="Foto" width="116" height="77"></ion-img>
         <!-- MODIFICACIONES----------------------------------------------------------- -->
       </ion-col>
       <!-- Crear columna para el texto-->
