--- a/src/app/group/group.page.html
+++ b/src/app/group/group.page.html
@@ -14,16 +14,16 @@
     <!-- Crear una fila por cada elemento --> 
     <ion-row *ngFor="let grupo of grupos; let i = index" >
       <!-- Crear columna para el icono-->
-      <ion-col size="1" [routerLink]="['/menu1', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
+      <ion-col [routerLink]="['/menu1', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
           <!-- MODIFICACIONES----------------------------------------------------------- -->
-          <ion-img [src]="'assets/grupos/grupos-' + ((i % 4) + 1) + '.png'" alt="Foto"></ion-img>
+          <ion-img class="mi-imagen" [src]="'assets/grupos/grupos-' + ((i % 4) + 1) + '.png'" alt="Foto" width="116" height="77"></ion-img>
           <!-- MODIFICACIONES----------------------------------------------------------- -->
       </ion-col>
       <!-- Crear columna para el texto-->
       <ion-col [routerLink]="['/menu1', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
         <ion-label>
-          <h2>{{grupo.subject}} {{grupo.listFkgroup.gro_code}}</h2>
-          <h3>Ubicación: {{grupo.classroom}} </h3>
+          <h2 class="extracurricular-text" > {{grupo.subject}} {{grupo.listFkgroup.gro_code}}</h2>
+          <h3 class="extracurricular-code" > Ubicación: {{grupo.classroom}} </h3>
         </ion-label>
       </ion-col>
 
@@ -86,7 +86,7 @@
   <ion-fab-list side="top">
     <!-- Unirse a un grupo -->
     <ion-fab-button (click)="mostrarAlerta()">
-      <ion-icon name="person-add"></ion-icon>
+      <ion-icon name="person-add-outline"></ion-icon>
     </ion-fab-button >
     <!-- Crear grupo -->
     <ion-fab-button (click)="new()">
@@ -94,15 +94,15 @@
     </ion-fab-button>
     <!-- Tabla classroom -->
     <ion-fab-button [routerLink]="['/classroom']">
-      <ion-icon name="business"></ion-icon>
+      <ion-icon name="business-outline"></ion-icon>
     </ion-fab-button>
     <!-- Tabla Major -->
     <ion-fab-button [routerLink]="['/major']">
-      <ion-icon name="cash-outline"></ion-icon>
+      <ion-icon name="school-outline"></ion-icon>
     </ion-fab-button>
     <!-- Tabla Subject -->
     <ion-fab-button [routerLink]="['/subject']">
-      <ion-icon name="bookmarks-outline"></ion-icon>
+      <ion-icon name="book-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab-list>
 </ion-fab>
