--- a/src/app/question/question.page.scss
+++ b/src/app/question/question.page.scss
@@ -1,146 +1,81 @@
+ion-header {
+  ion-toolbar {
+      --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
+      color: #fff;
+      font-weight: bold;
+  }
+}
 
-ion-card {
-    background-color:var(--ion-color-tertiary) ;
-    border-radius: 15px;
-    box-shadow: #cfcfcf;
-    margin-bottom: 22px;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+ion-grid {
+  margin: 5px;
+  ion-row {
+      border: 1px solid #f6f1f1; // Borde de cada notificación
+      background-color: var(--ion-color-primary-contrast);
+      border-radius: 10px;
+      box-shadow: 0 5px 5px rgba(13, 13, 13, 0.2);
+      margin-bottom: 10px; // Espacio entre notificaciones
+      padding: 10px;
+      ion-col {
+          display: flex;
+          align-items: center;
+          padding: 10px;
+          &:nth-child(1) {
+              justify-content: flex-start;
+              padding: 0px;
+          }
+          &:nth-child(2) {
+              flex-grow: 1;
+              color: var(--ion-color-text1);
+          }
+          &:nth-child(3) {
+              justify-content: right;
+          }
+      }
+  }
+} 
+
+.extracurricular-text {
+  font-size: 18px;
+  font-style: oblique;
+  font-weight: bold;
+}
+
+.extracurricular-code {
+  font-size: 15px;
+  color: var(--ion-color-text2);
+  padding: 5px;
+}
+
+.extracurricular-info {
+  font-size: 12px;
+}
+  .mi-imagen {
+    width: 116px;
+    height: 77px;
+  }
+
+  .icon-large {
+    font-size: 100px; /* Tamaño de los iconos de los archivos */
+  }
+
+  .button-with-text {
     display: flex;
     align-items: center;
-    width: 325px; /* Ancho deseado para la tarjeta */
-    height: 130px;
-}
-  .bbutton{
-    color: #040404;
-  }
-  ion-card:hover {
-    transform: scale(1.05);
-    box-shadow: var(--ion-color-tertiary);
-  }
-  .botonM{
-    position: fixed; /* Establece la posición fija para el botón */
-    top: 30px; /* Ajusta la distancia desde la parte inferior según tus necesidades */
-    right: 10px; /* Ajusta la distancia desde la derecha según tus necesidades */
-    z-index: 999; /* Ajusta el índice z si hay elementos superpuestos */
-  }
-
-
-  /* Estilos para el contenido de la tarjeta */
-  ion-card-content {
-    padding: 15px;
-    bottom:15px;
-    flex-grow: 0;
-    
   }
   
-  .imagecard{
-    width: 50px; 
+  .button-with-text ion-icon {
+    margin-right: 8px; /* Espacio entre el icono y el texto */
+  }
+
+  .content-container {
+    height: calc(100vh - 50px); /* El contenido ocupará el 100% de la altura menos 50px */
+    overflow-y: auto; /* Añade desplazamiento vertical si es necesario */
+  }
+  
+  .tabs-container {
     height: 50px;
+    width: 375px; /* Ancho fijo de 375px */
   }
-
-  .flecha{
-    position: relative;
-    margin: 10;
-    left: 5px;
-    bottom:-2px;
-  }
-  
-.delete{
-  position: relative;
-    left: 150px;
-    margin: 10;
-    font-size: 10px;
-    top: -45px;
-    color: var(--ion-color-secondary-tint); 
-    width: 75px; 
-    height: 5px
-}
-
-.update{
-  position: relative;
-    left: 150px;
-    margin: 10;
-    font-size: 10px;
-    top: -65px;
-    color: var(--ion-color-secondary-tint); 
-    width: 75px; 
-    height: 5px
-}
-.tittle{
-  color: #040404; 
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-  margin: 10;
-
-}
-.settings{
-    position: relative;
-    left: 190px;
-    margin: 10;
-    font-size: 10px;
-    bottom: 160px;
-    color: var(--ion-color-secondary-tint); 
-    width: 75px; 
-    height: 5px
-}
-.settings2{
-  position: relative;
-  left: 500px;
-  margin: 10;
-  font-size: 10px;
-  bottom: -50px;
-  color: var(--ion-color-secondary-tint); 
-  width: 75px; 
-  height: 5px
-}
-
-ion-footer {
-  position: fixed; /* Asegura que el footer se mantiene en la parte inferior de la página */
-  bottom: 0; /* Coloca el footer en la parte inferior */
-  width: 100%; /*  el ancho que desees */
-  background-color: #ffffff00; /* Cambia el color de fondo según tus preferencias */
-  border-top: 1px solid #ccc; /* Agrega un borde superior para separar del contenido */
-  padding: 10px; /* Añade relleno según sea necesario */
-}
-
-  /* Estilos para los encabezados de las tarjetas */
-  ion-card-header {
-    background-color: var(--ion-color-tertiary);
-    border-bottom: var(--ion-color-tertiary-contrast);
-    padding: 15px;
-    font-size: 18px;
-  }
-
-  /* Estilos para los títulos y subtítulos de las tarjetas */
-ion-card-title {
-    color: var(--ion-color-tertiary-contrast); 
-  }
-  
-  ion-card-subtitle {
-    color: var(--ion-color-tertiary-contrast);
-  }
-  
-
-  ion-toolbar {
-    background-color: var(--ion-color-tertiary-contrast);
-    color: var(--ion-color-tertiary-contrast);
-    border-bottom: 1px solid var(--ion-color-tertiary-contrast);
-  }
-
-  ion-fab-button::part(native) {
-    background-color: var(--ion-color-secondary-tint);
-    box-shadow: 0px 1px 2px 0px rgba(255, 72, 72, 0.3), 0px 1px 3px 1px rgba(133, 127, 127, 0.15);
-    color: var(--ion-color-tertiary-contrast);
-  }
-  
-  /*ion-fab-button::part(native):hover::after {
-    background-color: #a3e681;
-  }
-  
-  ion-fab-button::part(native):active::after {
-    background-color: #87d361;
-  }*/
   
 
   
