--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -20,14 +20,14 @@
       <ion-col size = "0.1">
       </ion-col>
       
-      <ion-col size="8">
+      <ion-col size="8" [routerLink]="['/subject']">
         <ion-label class="ion-text-wrap">
           <h2>{{major.maj_name}}</h2>
           <h3>{{major.maj_code}}</h3>
         </ion-label>
       </ion-col>
 
-      <ion-col >
+      <ion-col  >
         <ion-button id="click-trigger-{{major.maj_id}}">
           <ion-icon name="ellipsis-vertical"></ion-icon>
         </ion-button>
