--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -228,12 +228,12 @@
     --ion-background-color: #ffffff;
     --ion-background-color-rgb: 18,18,18;
 
-    --ion-text-color: #161616;
+    --ion-text-color: #4d4d4d;
     --ion-text-color-rgb: 255,255,255;
 
-    --ion-border-color: #354052;
+    --ion-border-color: #b0b0b0;
 
-    --ion-color-step-50: #354052;
+    --ion-color-step-50: #dedede;
     --ion-color-step-100: #2a2a2a;
     --ion-color-step-150: #363636;
     --ion-color-step-200: #414141;
@@ -243,7 +243,7 @@
     --ion-color-step-400: #717171;
     --ion-color-step-450: #7d7d7d;
     --ion-color-step-500: #898989;
-    --ion-color-step-550: #e6e6e6;
+    --ion-color-step-550: #6a6a6a;
     --ion-color-step-600: #1a1a1a;
     --ion-color-step-650: #acacac;
     --ion-color-step-700: #b8b8b8;
@@ -253,7 +253,7 @@
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #354052;
+    --ion-item-background: #cecece;;
 
     --ion-toolbar-background: #f2f2f2;
 
