--- a/src/app/grade/grade.page.scss
+++ b/src/app/grade/grade.page.scss
@@ -1,3 +1,11 @@
+ion-header {
+    ion-toolbar {
+        --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
+        color: #fff;
+        font-weight: bold;
+    }
+  }
+
 // MODIFICACIONES-----------------------------------------------------------
 ion-grid {
     margin: 5px;
