--- a/src/app/group/group.page.html
+++ b/src/app/group/group.page.html
@@ -22,8 +22,8 @@
       <!-- Crear columna para el texto-->
       <ion-col [routerLink]="['/menu1', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
         <ion-label>
-          <h2 class="extracurricular-text" > {{grupo.subject}} {{grupo.listFkgroup.gro_code}}</h2>
-          <h3 class="extracurricular-code" > Ubicación: {{grupo.classroom}} </h3>
+          <h2 class="text-title" > {{grupo.subject}} {{grupo.listFkgroup.gro_code}}</h2>
+          <h3 class="text-info" > Ubicación: {{grupo.classroom}} </h3>
         </ion-label>
       </ion-col>
 
