--- a/src/app/asistencia/asistencia.page.scss
+++ b/src/app/asistencia/asistencia.page.scss
@@ -1,10 +1,67 @@
-ion-item{
-    --background: #F6F6F6;
+ion-header {
+    ion-toolbar {
+        --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
+        color: #fff;
+        font-weight: bold;
+    }
+  }
+  
+  .wrapper {
+    display: flex;
+    flex-wrap: wrap;
+
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    height: 300px;
+    width: 300px;
+
+    margin: 0 auto;
+}
+
+b {
+    width: 100%;
+}
+
+.ripple-parent {
+    position: relative;
+    overflow: hidden;
+
+    border: 1px solid #ddd;
+}
+
+.rectangle {
+    width: 300px;
+    height: 150px;
+}
+
+.rounded-rectangle {
+    width: 185px;
+    height: 65px;
+    border-radius: 8px;
+}
+
+.circle {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+}
+
+ion-content {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
+
+ion-col{
     margin-top: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    border-radius: 4px;
-    --border-color:#F6F6F6;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
 }
 
 
