--- a/src/app/group/group.page.scss
+++ b/src/app/group/group.page.scss
@@ -1,9 +1,9 @@
 ion-header {
-    ion-toolbar {
-        --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
-        color: #fff;
-        font-weight: bold;
-    }
+  ion-toolbar {
+      --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
+      color: #fff;
+      font-weight: bold;
+  }
 }
 
 ion-grid {
@@ -34,19 +34,19 @@ ion-grid {
     }
 }
 
-.extracurricular-text {
+.text-title {
   font-size: 18px;
   font-style: oblique;
   font-weight: bold;
 }
 
-.extracurricular-code {
+.text-info {
   font-size: 15px;
   color: var(--ion-color-text2);
   padding: 5px;
 }
 
-.extracurricular-info {
+.text-details {
   font-size: 12px;
 }
 
