--- a/src/app/menunoti/menunoti.page.html
+++ b/src/app/menunoti/menunoti.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
 <!-- Boton para regresar -->    
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button default-href="#" routerLink="/"></ion-back-button>
     </ion-buttons>
     <ion-title>Grupo</ion-title>
   </ion-toolbar>
