--- a/src/app/notextracurricular/notextracurricular.page.scss
+++ b/src/app/notextracurricular/notextracurricular.page.scss
@@ -1,3 +1,11 @@
+ion-header {
+    ion-toolbar {
+        --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
+        color: #fff;
+        font-weight: bold;
+    }
+  }
+
 ion-grid {
     margin: 5px;
     ion-row {
@@ -24,6 +32,27 @@ ion-grid {
             }
         }
     }
+}
+
+.text-title {
+  font-size: 18px;
+  font-style: oblique;
+  font-weight: bold;
+}
+
+.text-info {
+  font-size: 15px;
+  color: var(--ion-color-text2);
+  padding: 5px;
+}
+
+.text-details {
+  font-size: 12px;
+}
+
+.mi-imagen {
+  width: 116px;
+  height: 77px;
 }
 
 .extracurricular-text {
