--- a/src/app/question-detail/question-detail.page.scss
+++ b/src/app/question-detail/question-detail.page.scss
@@ -1,5 +1,29 @@
+ion-header {
+  ion-toolbar {
+      --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
+      color: #fff;
+      font-weight: bold;
+  }
+}
+
+.text-title {
+  font-size: 18px;
+  font-style: oblique;
+  font-weight: bold;
+}
+
+.text-info {
+  font-size: 15px;
+  color: black;
+  text-transform: none; /* Evitar la transformación de texto a mayúsculas */
+}
+
+
+.text-details {
+  font-size: 12px;
+}
+
 ion-card {
-    background-color:var(--ion-color-tertiary) ;
     border-radius: 15px;
     box-shadow: #cfcfcf;
     margin-bottom: 22px;
@@ -7,19 +31,23 @@ ion-card {
     display: flex;
     align-items: center;
     width: 200px; /* Ancho deseado para la tarjeta */
-    height: 200px;
+    height: flex;
     font-size: 14px;
 }
 
-.ic{
-    position: relative;
-    display: flex;
-    text-align: left;
-  }
-.ic2{
-    position: relative;
-    display: flex;
-    text-align: right;
-    left: 140px;
-    
-  }
+/* Estilo para ion-card para el usuario*/
+ion-card.usuario {
+  background-color: #A897FC; /* Color para la clase "usuario" */
+  position: relative;
+  display: flex;
+  text-align: left;
+}
+
+/* Estilo para ion-card para ver los mensajes que recibimos */
+ion-card.otherperson {
+  background-color: #D9D2FF; /* Color para la clase "otherperson" */
+  position: relative;
+  display: flex;
+  text-align: right;
+  left: 140px;
+}
