--- a/src/app/subject/subject.page.html
+++ b/src/app/subject/subject.page.html
@@ -2,7 +2,6 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button default-href="#" routerLink="/"></ion-back-button>
-          
     </ion-buttons>
     <ion-title>
       Materias Disponibles
@@ -22,25 +21,34 @@
 
       <ion-col size="8">
         <ion-label class="ion-text-wrap">
-          <h2>{{subject.sub_name}}</h2>
-          <h3>{{subject.sub_code}}</h3>
+          <h2 class="text-title">{{subject.sub_name}}</h2>
+          <h3 class="text-info">{{subject.sub_code}}</h3>
         </ion-label>
       </ion-col>
 
       <ion-col>
-        <ion-button id="click-trigger-{{subject.sub_id}}">
+        <ion-button id="click-trigger-{{subject.sub_id}}" size="small">
           <ion-icon name="ellipsis-vertical"></ion-icon>
         </ion-button>
-        <ion-popover trigger="click-trigger-{{subject.sub_id}}" [dismissOnSelect]="true" [keepContentsMounted]="true"
+        <ion-popover 
+          trigger="click-trigger-{{subject.sub_id}}" 
+          [dismissOnSelect]="true" 
+          [keepContentsMounted]="true"
           side="end">
           <ng-template>
             <ion-content>
               <ion-list>
-                <ion-item [button]="true" [detail]="false" (click)="alertEliminar(subject.sub_id)">
+                <ion-item 
+                   [button]="true" 
+                  [detail]="false" 
+                  (click)="alertEliminar(subject.sub_id)">
                   <ion-icon name="trash"></ion-icon>
                   Eliminar
                 </ion-item>
-                <ion-item [button]="true" [detail]="false" (click)="UpSubject(subject.sub_id)">
+                <ion-item 
+                  [button]="true" 
+                  [detail]="false" 
+                  (click)="UpSubject(subject.sub_id)">
                   <ion-icon name="create"></ion-icon>
                   Modificar
                 </ion-item>
@@ -60,10 +68,6 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-
-
-  
-
 
 <app-paginacion [total]="totalSubjects" (click)="pagina($event)"></app-paginacion>
 
