Vistas maestro listas

--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -17,7 +17,7 @@
       <ion-col>
         <!-- Botón para la página 'asistencia' -->
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/lista-asistencia',grupoid]">
-          <ion-icon aria-hidden="true" src="assets/grupoMenu/code.svg" size="large"></ion-icon>
+          <ion-icon aria-hidden="true" src="assets/icon/asistencia.svg" size="large"></ion-icon>
         </ion-button>
         <ion-label>Ver asistencia</ion-label>
       </ion-col>
