--- a/src/app/asistencia/asistencia.page.scss
+++ b/src/app/asistencia/asistencia.page.scss
@@ -5,48 +5,24 @@ ion-header {
         font-weight: bold;
     }
   }
-  
-  .wrapper {
-    display: flex;
-    flex-wrap: wrap;
-
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
-    height: 300px;
-    width: 300px;
-
-    margin: 0 auto;
-}
-
-b {
-    width: 100%;
-}
-
-.ripple-parent {
+  .ripple-parent {
     position: relative;
     overflow: hidden;
 
     border: 1px solid #ddd;
 }
 
-.rectangle {
-    width: 300px;
-    height: 150px;
-}
-
-.rounded-rectangle {
-    width: 185px;
-    height: 65px;
-    border-radius: 8px;
-}
-
 .circle {
-    width: 90px;
-    height: 90px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
 }
+
+ion-button.circle {
+    --background: transparent; /* Color de fondo del botón */
+    --border-radius: 50%; /* Para hacer el botón circular */
+  }
+  
 
 ion-content {
     padding: 1rem;
@@ -57,6 +33,8 @@ ion-content {
 }
 
 ion-col{
+    width: fit-content;
+    height: fit-content;
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
@@ -65,3 +43,12 @@ ion-col{
 }
 
 
+ion-item{
+    --background: #F6F6F6;
+    --margin-top: 14px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 4px;
+
+    --border-color:#F6F6F6;
+}
